fixing format